# slicer

./: CMakeLists.txt  README.md
cmake/: get_llvm.cmake  slicetests.cmake
include/cgBuilder/: cgBuilder.h
include/differ/: DiffConsumer.h
lib/: CMakeLists.txt
lib/cgBuilder/: CMakeLists.txt  cgBuilder.cpp
sh/: compileAndLinkLL.sh  setupTests.sh
src/: CMakeLists.txt
src/differ/: CMakeLists.txt  DiffConsumer.cpp  DiffLog.cpp  DifferenceEngine.cpp  FunctionDiffConsumer.cpp  differ.cpp
src/sliceProducer/: CMakeLists.txt  sliceProducer.cpp
